test_crash2.txt
file:///C:/Users/andre.oswald/Code/Neuro/neurotoxic-game/src/utils/audio/cleanupUtils.js:3
import { audioState, resetGigState } from './state.js'
                     ^^^^^^^^^^^^^
SyntaxError: The requested module './state.js' does not provide an export named 'resetGigState'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async file:///C:/Users/andre.oswald/Code/Neuro/neurotoxic-game/tests/audioProcedural.test.js:162:26

Node.js v24.13.0
Ô£û tests\audioProcedural.test.js (100.479ms)
Ôä╣ tests 1
Ôä╣ suites 0
Ôä╣ pass 0
Ôä╣ fail 1
Ôä╣ cancelled 0
Ôä╣ skipped 0
Ôä╣ todo 0
Ôä╣ duration_ms 109.5928

Ô£û failing tests:

test at tests\audioProcedural.test.js:1:1
Ô£û tests\audioProcedural.test.js (100.479ms)
  'test failed'
